[gd_scene load_steps=4 format=3 uid="uid://dfn5ipwbv0sl"]

[ext_resource type="PackedScene" uid="uid://cmyf1ng3pfshx" path="res://SlotManagement/element_slot.tscn" id="1_cfqfo"]
[ext_resource type="Script" uid="uid://cc8nypshh74vl" path="res://Crafting Stations/Scripts/transmutation_circle.gd" id="1_mvurf"]
[ext_resource type="PackedScene" uid="uid://dqpo3sr18ca2r" path="res://SlotManagement/product_slot.tscn" id="2_rxurf"]

[node name="Transmutation Circle" type="Control"]
layout_mode = 3
offset_right = 145.0
offset_bottom = 158.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mvurf")

[node name="ElementSlot" parent="." instance=ExtResource("1_cfqfo")]
layout_mode = 0
offset_left = 101.0
offset_top = 63.0
offset_right = 141.0
offset_bottom = 103.0

[node name="ElementSlot3" parent="." instance=ExtResource("1_cfqfo")]
layout_mode = 0
offset_left = 52.0
offset_top = 17.0
offset_right = 92.0
offset_bottom = 57.0

[node name="ElementSlot4" parent="." instance=ExtResource("1_cfqfo")]
layout_mode = 0
offset_left = 5.0
offset_top = 65.0
offset_right = 45.0
offset_bottom = 105.0

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 27.0
offset_top = 115.0
offset_right = 120.0
offset_bottom = 155.0
text = "Transmute"

[node name="ProductSlot" parent="." instance=ExtResource("2_rxurf")]
layout_mode = 0
offset_left = 53.0
offset_top = 64.0
offset_right = 93.0
offset_bottom = 104.0

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
